chore: install extension vetur replacing other vue extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,11 +18,10 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "jcbuisson.vue",
     "ms-azuretools.vscode-docker",
     "ms-vscode-remote.remote-containers",
     "ms-vsliveshare.vsliveshare",
-    "sdras.vue-vscode-snippets",
+    "octref.vetur",
     "shan.code-settings-sync",
     "sleistner.vscode-fileutils",
     "pustelto.bracketeer",
