chore: configure header

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,8 +7,9 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular",
-      "infile": "CHANGELOG.md"
+      "header": "# Changelog",
+      "infile": "CHANGELOG.md",
+      "preset": "angular"
     }
   }
 }
