--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "slidev build example.md",
     "dev": "slidev example.md --open",
     "export": "slidev export example.md",
+    "prepare": "husky install",
     "release": "release-it",
     "screenshot": "slidev export example.md --format png"
   },
@@ -27,9 +28,12 @@
     "theme-vitesse": "^0.1.14"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@iconify-json/mdi": "^1.1.0",
     "@release-it/conventional-changelog": "^4.2.0",
     "@slidev/cli": "^0.28.6",
+    "husky": "^7.0.4",
     "playwright-chromium": "^1.19.2",
     "release-it": "^14.12.5"
   },
