chore: configure release-it for conventional commits spec

--- a/.release-it.json
+++ b/.release-it.json
@@ -10,7 +10,7 @@
     "@release-it/conventional-changelog": {
       "header": "# Changelog",
       "infile": "CHANGELOG.md",
-      "preset": "angular"
+      "preset": "conventionalcommits"
     }
   }
 }
