--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "export": "slidev export example.md",
     "prepare": "husky install",
     "release": "release-it",
+    "setup": "npm install && npm run prepare",
     "screenshot": "slidev export example.md --format png"
   },
   "dependencies": {
