chore: configure release-it to do github web releases

--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,8 @@
   },
   "github": {
     "release": true,
-    "releaseName": "v${version}"
+    "releaseName": "v${version}",
+    "web": true
   },
   "plugins": {
     "@release-it/conventional-changelog": {
