chore: add windicss-intellisense extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,7 @@
     "shan.code-settings-sync",
     "sleistner.vscode-fileutils",
     "pustelto.bracketeer",
+    "voorjaar.windicss-intellisense",
     "vscode-icons-team.vscode-icons",
     "wakatime.vscode-wakatime",
     "wix.vscode-import-cost"
