--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "prepare": "husky install",
     "release": "release-it",
     "setup": "npm install && npm run prepare",
-    "screenshot": "slidev export example.md --format png"
+    "screenshot": "slidev export example.md --format png",
+    "prettier": "prettier --write **/*.{css,ts,vue}"
   },
+  "prettier": "@alexanderdavide/prettier-config",
   "dependencies": {
     "@slidev/types": "^0.28.6",
     "codemirror-theme-vars": "^0.1.1",
@@ -36,6 +38,7 @@
     "theme-vitesse": "^0.1.14"
   },
   "devDependencies": {
+    "@alexanderdavide/prettier-config": "^1.0.1",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@iconify-json/mdi": "^1.1.0",
@@ -43,6 +46,7 @@
     "@slidev/cli": "^0.28.6",
     "husky": "^7.0.4",
     "playwright-chromium": "^1.19.2",
+    "prettier": "^2.6.2",
     "release-it": "^14.12.5"
   },
   "engines": {
