--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,31 +6,35 @@
       "VARIANT": "16-bullseye"
     }
   },
-  "settings": {
-    "sync.syncExtensions": false,
-    "sync.autoDownload": true,
-    "sync.autoUpload": false
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "adpyke.codesnap",
+        "antfu.slidev",
+        "codeshifu.1loc",
+        "codezombiech.gitignore",
+        "eamodio.gitlens",
+        "editorconfig.editorconfig",
+        "esbenp.prettier-vscode",
+        "ms-azuretools.vscode-docker",
+        "ms-vscode-remote.remote-containers",
+        "ms-vsliveshare.vsliveshare",
+        "octref.vetur",
+        "shan.code-settings-sync",
+        "sleistner.vscode-fileutils",
+        "pustelto.bracketeer",
+        "voorjaar.windicss-intellisense",
+        "vscode-icons-team.vscode-icons",
+        "wakatime.vscode-wakatime",
+        "wix.vscode-import-cost"
+      ],
+      "settings": {
+        "sync.syncExtensions": false,
+        "sync.autoDownload": true,
+        "sync.autoUpload": false
+      }
+    }
   },
-  "extensions": [
-    "adpyke.codesnap",
-    "antfu.slidev",
-    "codeshifu.1loc",
-    "codezombiech.gitignore",
-    "eamodio.gitlens",
-    "editorconfig.editorconfig",
-    "esbenp.prettier-vscode",
-    "ms-azuretools.vscode-docker",
-    "ms-vscode-remote.remote-containers",
-    "ms-vsliveshare.vsliveshare",
-    "octref.vetur",
-    "shan.code-settings-sync",
-    "sleistner.vscode-fileutils",
-    "pustelto.bracketeer",
-    "voorjaar.windicss-intellisense",
-    "vscode-icons-team.vscode-icons",
-    "wakatime.vscode-wakatime",
-    "wix.vscode-import-cost"
-  ],
   "forwardPorts": [3030],
   "postCreateCommand": "npm install",
   "remoteUser": "node"
