chore: use new Vue extension Volar
see: https://github.com/vuejs/vetur/issues/3476

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,12 +19,12 @@
         "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-containers",
         "ms-vsliveshare.vsliveshare",
-        "octref.vetur",
         "shan.code-settings-sync",
         "sleistner.vscode-fileutils",
         "pustelto.bracketeer",
         "voorjaar.windicss-intellisense",
         "vscode-icons-team.vscode-icons",
+        "vue.volar",
         "wakatime.vscode-wakatime",
         "wix.vscode-import-cost"
       ],
