--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "release-it": "^14.12.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "slidev": ">=0.47.0"
   },
   "slidev": {
     "colorSchema": "both",
