--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           name: build
           path: dist
+          retention-days: 1
   deploy:
     runs-on: ubuntu-latest
     needs: build
